--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
-  "name": "my-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "next": "10.2.3",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
-  }
+	"name": "my-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"knex": "knex",
+		"migrations": "knex migrate:latest",
+		"reset-db": "knex migrate:rollback --all && npm run migrations"
+	},
+	"dependencies": {
+		"dotenv": "^10.0.0",
+		"just-typeof": "^2.0.0",
+		"knex": "^0.21.19",
+		"next": "10.2.3",
+		"next-connect": "^0.10.1",
+		"objection": "^2.2.15",
+		"pg": "^8.6.0",
+		"react": "17.0.2",
+		"react-dom": "17.0.2"
+	}
 }
